--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,11 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 # Allow the mouse to resize windows and select tabs
 set -g mouse on
 
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+
 # Allow tmux to set the terminal title
 set -g set-titles on
 
@@ -149,6 +154,7 @@ bind-key E command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
 
 # allow to copy to system clipboard
 bind-key y run -b "tmux show-buffer | xclip -selection clipboard"\; display-message "copied tmux buffer to system clipboard"
+
 
 # open lazygit in a new window with prefix+g
 bind-key g new-window -n lazygit -c "#{pane_current_path}" "lazygit"
