fix: update kitty theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -34,8 +34,9 @@ draw_minimal_borders yes
 
 # Themes
 # # gruvbox theme
-include ./gruvbox_dark.conf
+# include ./gruvbox_dark.conf
 # # cattpuccin default
 # include ./catppuccin.conf
 # catpuccing black
-# include ./catppuccinBLACK.conf
+include ./catppuccinBLACK.conf
+# include ./tokyo-night-kitty.conf
