--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -25,7 +25,8 @@ font_size 18.0
 # italic_font      JetBrains Mono Italic
 
 # View
-tab_title_template "{title}"  
+# tab_title_template "{title}"  
+tab_title_template "{index}: {title.split('/')[-1]}"
 active_tab_title_template "{title}"  
 hide_window_decorations yes
 window_border_width 0 
@@ -38,5 +39,5 @@ draw_minimal_borders yes
 # # cattpuccin default
 # include ./catppuccin.conf
 # catpuccing black
-include ./catppuccinBLACK.conf
-# include ./tokyo-night-kitty.conf
+# include ./catppuccinBLACK.conf
+include ./tokyo-night-kitty.conf
