fix: tmux copy paste

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,6 @@
 # Configuration
 #--------------------------------------------------------------------------
 
-# Use Vi mode
-setw -g mode-keys vi
 
 # Increase scrollback buffer size
 set -g history-limit 10000
@@ -32,9 +30,9 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 set -g mouse on
 
 set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
-unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+
+
+
 
 # Allow tmux to set the terminal title
 set -g set-titles on
@@ -152,8 +150,6 @@ bind-key B break-pane -d
 # put pane back into window
 bind-key E command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
 
-# allow to copy to system clipboard
-bind-key y run -b "tmux show-buffer | xclip -selection clipboard"\; display-message "copied tmux buffer to system clipboard"
 
 
 # open lazygit in a new window with prefix+g
@@ -190,6 +186,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+# COPY TO CLIPBOARD
+# allow to copy to system clipboard
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
