--- a/.tmux.conf
+++ b/.tmux.conf
@@ -193,5 +193,10 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
+# Tmus float pane
+set -g @plugin 'omerxx/tmux-floax'
+
+set -g @floax-bind '-n M-p'
+
 run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
 run '~/.tmux/plugins/tpm/tpm'
