--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,7 +9,7 @@ cursor_blink_interval 0
 #: Fonts {{{
 font_family      Dank Mono
 italic_font      Dank Mono Italic
-font_size 18.0
+font_size 20.0
 
 #Microsoft Font
 # font_family CaskaydiaCove Nerd Font Mono Regular
@@ -39,5 +39,5 @@ draw_minimal_borders yes
 # # cattpuccin default
 # include ./catppuccin.conf
 # catpuccing black
-# include ./catppuccinBLACK.conf
-include ./tokyo-night-kitty.conf
+include ./catppuccinBLACK.conf
+# include ./tokyo-night-kitty.conf
